development/applications/edge-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      labels:
        app: edge-service
    spec:
      containers:
        - name: edge-service
          image: ghcr.io/bappeda-dev-team/edge-service:latest
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: edge-config-volume
              mountPath: /workspace/config
              readOnly: true
      volumes:
        - name: edge-config-volume
          configMap:
            name: edge-service-config
